# crazymeow

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.md  requirements.txt
controller_setup/: axis_mapper.py  config_writer.py  controller_detector.py  live_tester.py  main.py
crazypilot/: config_loader.py  controller_input.py  crazyflie_interface.py  joystick_mapper.py  logger.py  main.py  state_machine.py
doc/: design_controller_setup.md  design_crazypilot.md  design_system_setup_helpers.md  requirements.md  requirements_controller_setup.md  requirements_crazypilot.md  requirements_system_setup_helpers.md  test_report_controller_setup.md  test_report_crazypilot.md  test_report_system_setup_helpers.md
scripts/: 99-bitcraze.rules  configure_crazyflie.py  setup_dependencies.py  setup_services.py  setup_ssh.py  test_connection.py
scripts/utils/: git_helper.py  sudo_helper.py
tests/: test_controller_setup.py  test_crazypilot.py  test_system_setup_helpers.py
