[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "crazymeow"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cflib",
    "pygame",
]

[project.scripts]
crazypilot = "crazypilot.main:main"
controller-setup = "controller_setup.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crazypilot*", "controller_setup*"]
